<resources>
    <string name="app_name">SchoolManager</string>
    <string name="title_activity_main_navigation">Menu Principal</string>

    <string name="title_homeworks">Tareas</string>
    <string name="title_califications">Notas</string>
    <string name="title_chat">Conversación</string>
    <string name="title_subject">Asignaturas</string>
    <string name="title_contacts">Contactos</string>
    <string name="desc_logo_splash_screen">Logo de la Aplicación</string>

    <string name="label_search_homework">Buscar Tarea</string>
    <string name="label_edit_timetable">Editar Horario</string>
    <string name="label_help_homework">Ayuda</string>
    <string name="label_about">Sobre el Desarrollador</string>

    <string name="label_monday">Lunes</string>
    <string name="label_tuesday">Martes</string>
    <string name="label_wednesday">Miercoles</string>
    <string name="label_thursday">Jueves</string>
    <string name="label_friday">Viernes</string>
    <string name="label_playtime">Recreo</string>

    <string name="label_countListHomework"> Tareas en Total</string>
    <string name="label_countListTeacher"> - Profesores en Total</string>
    <string name="label_countListStudent"> - Estudiantes en Total</string>
    <string name="title_tab_1_contacts">Estudiantes</string>
    <string name="title_tab_2_contacts">Profesores</string>

    <string name="label_search_contact">Buscar Contacto</string>
    <string name="label_help_contact">Ayuda</string>
    <string name="label_order_contact">Ordenar</string>
    <string name="label_save_contact">Guardar</string>
    <string name="label_delete_contact">Eliminar</string>
    <string name="desc_image_profile">Imagen de perfil del contacto</string>
    <string name="hint_name_person">Nombre</string>
    <string name="hint_lastname_person">Apellidos</string>
    <string name="hint_phone_person">Teléfono</string>
    <string name="hint_email_person">Correo Electrónico</string>
    <string name="hint_address_person">Dirección</string>
    <string name="hint_namefather_person">Nombre del Padre</string>
    <string name="hint_phonefather">Teléfono del Padre</string>
    <string name="hint_namemother_person">Nombre de la Madre</string>
    <string name="hint_phonemother">Teléfono de la Madre</string>
    <string name="hint_birthdate">Fecha de Nacimiento</string>
    <string name="option_default_spinner_gender">Seleccione Género</string>
    <string name="error_name_person">Introduzca un nombre de persona valido</string>
    <string name="error_lastname_person">Introduzca un apellido de persona válido</string>
    <string name="error_phone_person">Introduzca un número de telefono válido</string>
    <string name="error_email_person">Introduzca un correo electrónico válido</string>
    <string name="error_address_person">Introduzca una dirección válida</string>
    <string name="error_birthdate_person">Introduzca una fecha de nacimiento válida</string>
    <string name="error_gender_person">Error al elegir el género de la persona</string>
    <string name="error_empty_name_person">El nombre es obligatorio</string>
    <string name="error_empty_phone_person">El número es obligatorio</string>
    <string name="text_button_cancel">Cancelar</string>
    <string name="text_button_accept">Aceptar</string>
    <string name="desc_image_gender">Logotipo de genero de persona</string>
    <string name="hint_name_gender">Nombre del Género</string>
    <string name="hint_description_gender">Descripción del género</string>
    <string name="title_dialog_confirmation">Confirmación</string>
    <string name="message_dialog_confirmation">¿Estás seguro?</string>
    <string name="title_alert_save_contact">Guardar Contacto</string>
    <string name="message_alert_save_contact">¿Estás seguro que quieres guardar los cambios?</string>
    <string name="title_alert_remove_contact">Eliminar Contacto</string>
    <string name="message_alert_remove_contact">¿Estás seguro, se borrará el contacto?</string>
    <string name="hint_search_student">Buscar por Nombre o Tlf</string>
    <string name="title_activity_form_student">Estudiante</string>
    <string name="title_activity_help">Ayuda</string>
    <string name="text_textview_help_disconnect">Ha habido un problema con la conexión a internet, por lo tanto no es posible cargar la pagina de ayuda. Vuelva a intentarlo en un momento...</string>
    <string name="text_button_retry">Reintentar conectar...</string>

</resources>
