<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_homeworks"
        android:icon="@drawable/ic_contacts"
        android:title="@string/title_homeworks" />

    <item
        android:id="@+id/navigation_subjects"
        android:icon="@drawable/ic_subject"
        android:title="@string/title_subject" />

    <item
        android:id="@+id/navigation_califications"
        android:icon="@drawable/ic_calification"
        android:title="@string/title_califications" />
    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />


</menu>
