<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_homeworks">

    <fragment
        android:id="@+id/navigation_homeworks"
        android:name="com.juansm.schoolmanager.View.ui.homework.HomeworkFragment"
        android:label="@string/title_homeworks"
        tools:layout="@layout/fragment_homeworks" />

    <fragment
        android:id="@+id/navigation_subjects"
        android:name="com.juansm.schoolmanager.View.ui.subject.SubjectFragment"
        android:label="@string/title_subject"
        tools:layout="@layout/fragment_subjects" />

    <fragment
        android:id="@+id/navigation_califications"
        android:name="com.juansm.schoolmanager.View.ui.calification.CalificationFragment"
        android:label="@string/title_califications"
        tools:layout="@layout/fragment_califications" />
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.juansm.schoolmanager.View.ui.contact.Fragment.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.juansm.schoolmanager.View.ui.profile.ProfileFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>