<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:contentDescription="@string/desc_image_gender"
        android:scaleType="fitCenter"
        android:layout_margin="12dp"

        android:src="@drawable/ic_gender" />

    <EditText
        android:id="@+id/edittext_name_new_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name_gender"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edittext_description_new_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_description_gender"
        android:inputType="textCapSentences|textShortMessage" />
</LinearLayout>