<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingStart="2dp"
    android:paddingEnd="2dp">

    <LinearLayout
        android:id="@+id/linearlayout_search_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TextAppearance.Form"
        android:layout_margin="10dp"
        android:padding="14dp"
        android:orientation="vertical"
        android:background="@color/colorsecondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/countStudent"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <ImageButton
                android:id="@+id/close_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:background="@color/transparent"
                android:src="@drawable/ic_close_dark"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/refresh_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:layout_gravity="right"
                android:background="@color/transparent"
                android:src="@drawable/ic_refresh"/>
        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            app:voiceIcon="@drawable/ic_keyboard_voice"
            app:closeIcon="@drawable/ic_close"
            app:searchIcon="@drawable/ic_search"
            android:elevation="8dp"
            app:queryHint="@string/hint_search_student"
            app:iconifiedByDefault="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp">
            <ImageView
                android:id="@+id/icon_date_search"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_date" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_date_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_birthdate"
                android:inputType="date"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_gender" />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_gender_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hint_search_student"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/countStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_search_student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview_student"
        android:text="@string/label_countListStudent"
        android:textColor="@color/colortextmenu"
        android:textSize="18sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_student"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countStudent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add_contact"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>